[tool.poetry]
name = "ecg_service"
version = "0.1.0"
description = ""
authors = ["Dmitriy Sorochenkov <podotkos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
pydantic-settings = "^2.1.0"
isort = "^5.12.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
pyyaml = "^6.0.1"
numpy = "^1.26.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ipython = "^8.18.1"
pytest-asyncio = "0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
